# kenya

./: .env.example  .gitignore  README.md  accounts.txt  pyproject.toml
analysis/: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml  run_eval.py  verify_stories.py
analysis/investigations/2026-07-17-manipulation-sweep/: 00_coordination_refresh.py  01_temporal_fingerprints.py  02_birth_cohorts.py  03_copypasta.py  04_reply_brigades.py  05_velocity_anomalies.py  06_narrative_laundering.py  07_language_targeting.py  08_follows_forensics.py  09_convergence.py  10_incitement_sweep.py  _lib.py  findings.md
analysis/investigations/2026-07-18-hatespeech-finetune/: 00_prep.py  01_baseline.py  02_train.py  03_eval.py  04_infer.py  07_siblings.py  08_export_corpus.py  09_dapt.py  10_push_hf.py  11_hate_sweep.py  12_mine_candidates.py  12_score_corpus.py  13_label_drive.py  14_label_merge.py  15_adjudicate.py  16_gold_split.py  17_prep_round2.py  18_blind_check.py  19_label_cli.py  20_heldout.py  README.md  STATE.md  _common.py  colab_b3_batch.ipynb  colab_d_dapt.ipynb  colab_d_finetune.ipynb  findings-plan-a.md  findings.md  labeled_batch_output.jsonl  labeled_output.jsonl  labeled_output_batch.jsonl  labeled_output_v2.jsonl  labeled_output_v2_batch.jsonl  modal_train.py  run_b3_batch.sh  run_d2_batch.sh  run_d3_seeds.sh  run_d4_control.sh  run_d_batch.sh  run_r2_batch.sh  (+4 more)
analysis/investigations/2026-07-18-hatespeech-finetune/archive/: PLAN-A-HANDOFF.md  PLAN-D-HANDOFF.md  README.md  plans-round2.md
analysis/investigations/2026-07-18-hatespeech-finetune/prompts/: label_v1.md  label_v2.md  label_v3.md
analysis/notebooks/: authenticity.py  coordination.py  desk_brief.py  explore.py  manipulation.py  narratives.py  stories.py
analysis/notebooks/__marimo__/session/: authenticity.py.json  coordination.py.json  explore.py.json  narratives.py.json
analysis/src/kma/: __init__.py  authenticity.py  classify.py  coordination.py  db.py  deltas.py  enrich.py  eval.py  framing.py  incitement.py  netviz.py  semantic.py  stories.py  viz.py
analysis/tests/: test_coordination.py  test_deltas.py  test_framing.py  test_ground_truth.py  test_incitement.py  test_semantic.py  test_stories.py  test_viz.py
collector/: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
collector/config/: accounts.example.yaml  proxies.example.yaml  targets.yaml
collector/src/kenya_monitor/: __init__.py  accounts.py  adaptive.py  cli.py  config.py  follow_crawl.py  pacing.py  runner.py  scheduler.py  stats.py  storage.py  suspicion.py
collector/src/kenya_monitor/collectors/: __init__.py  apify.py  base.py  x.py
collector/tests/: test_accounts.py  test_apify.py  test_cib_collection.py  test_follow_crawl.py  test_follows_cli.py  test_stats.py  test_story_promotion.py  test_suspicion.py
docs/analysis/: README.md  code-map.md  data-model.md  phase-0-collector-completeness.md  (+4 more)
server/: Dockerfile  compose.yaml  duckdb_server.py  pyproject.toml
(+18 files in other folders)
