[project]
name = "kma"
version = "0.1.0"
description = "DuckDB/Polars analysis workspace over the R2 Kenya-election dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "polars>=1",
    "pandas>=2",
    "pyarrow>=18",
    "marimo>=0.9",
    "altair>=5",
    "ipykernel>=6",
    "python-dotenv>=1",
    "pytz>=2026.2",
    "seaborn>=0.13.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.13.0",
    "protobuf>=7.35.1",
    "umap-learn>=0.5.7",
    "numba>=0.60",
    "llvmlite>=0.43",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
