[project]
name = "kma"
version = "0.1.0"
description = "DuckDB/Polars analysis workspace over the R2 Kenya-election dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "polars>=1",
    "pandas>=2",
    "pyarrow>=18",
    "marimo>=0.9",
    "altair>=5",
    "ipykernel>=6",
    "python-dotenv>=1",
    "pytz>=2026.2",
    "seaborn>=0.13.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.13.0",
    "protobuf>=7.35.1",
    "umap-learn>=0.5.7",
    "numba>=0.60",
    "llvmlite>=0.43",
    "python-igraph>=1.0.0",
    "leidenalg>=0.12.0",
    "statsmodels>=0.14.6",
    "scipy>=1.18.0",
    "networkx>=3.6.1",
    "plotly>=6.8.0",
    "sqlglot>=30.12.0",
    "torch>=2.2",  # direct so the CPU-wheel source below applies on Linux
]

[project.scripts]
kma-enrich = "kma.enrich:main"

[dependency-groups]
dev = ["pytest>=8"]

# Linux has no GPU on our hosts (tf1/pi0): pull the CPU-only torch wheels, which
# skip the ~5GB of CUDA/triton/nccl payload. macOS keeps the default PyPI torch
# (MPS-capable) - the marker scopes this to Linux only.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
